--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ authors = ["heri <heri@studiozenkai.com>"]
 [dependencies]
 actix = "0.8"
 actix-web = "1.0.0-beta"
-diesel = { version = "1.0.0", features = ["postgres"] }
+diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.9.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 futures = "0.1"
+chrono = { version = "0.4.6", features = ["serde"] }
