--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["heri <heri@studiozenkai.com>"]
 
 [dependencies]
-actix = "0.8"
-actix-web = "1.0.0-beta"
+actix = "0.13.5"
+actix-web = "4.9.0"
 diesel = { version = "2.2.3", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.9.0"
 serde = "1.0"
